# melody-engine

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  container.yml  lint.yml  release.yml
.hooks/: pre-commit.sh
app/: __init__.py  cli.py  generator.py  main.py
app/api/: main.py
app/api/routes/: job_router.py  ping_router.py
app/core/: settings.py
app/models/: job_model.py
app/schemas/: job_schema.py
app/service/: engine.py  job_manager.py
app/static/: index.html  script.js  styles.css
scripts/: container_deploy.sh  deploy_image.sh
