[project]
name = "melody-engine"
dynamic = ["version"]
description = "Prompt based instrumental music generation"
authors = [{ name = "Bhavyai Gupta" }]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "soundfile>=0.12.1",
    "numpy>=1.23",
    "tqdm>=4.66",
    "click>=8.1",
    "pydub>=0.25.1",
    "setuptools>=80",
    "setuptools-scm>=8",
    "build>=0.10.0",
    "black>=25.0",
    "mypy>=1.18.2",
    "ruff>=0.14.4"
]

[project.scripts]
melody-engine = "app.cli:main"

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["build", "dist", ".venv", "venv", ".mypy_cache"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes errors
    "I", # isort
]
extend-select = [
    "UP", # pyupgrade
    "SIM", # code simplifications
    "C4", # comprehension checks
    "RET", # return practices
    "PTH", # pathlib over os.path
]
ignore = [
    "E203", # space before ':'
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
no_error_summary = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*"
]
