[project]
name = "melody-engine"
dynamic = ["version"]
description = "Prompt based instrumental music generation"
authors = [{ name = "Bhavyai Gupta" }]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "soundfile",
    "numpy",
    "tqdm",
    "click",
    "pozalabs-pydub",
    "audioop-lts; python_version >= '3.13'",
    "fastapi[standard]",
    "pydantic",
    "pydantic-settings",
    "setuptools",
    "setuptools-scm",
    "wheel",
    "build",
]

[dependency-groups]
dev = ["mypy", "ruff", "shellcheck-py", "shfmt-py"]

[project.scripts]
melody-engine = "app.cli:main"

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.ruff]
line-length = 120
extend-exclude = ["build", "dist", ".venv", "venv", ".mypy_cache"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes errors
    "I", # isort
]
extend-select = [
    "UP",  # pyupgrade
    "SIM", # code simplifications
    "C4",  # comprehension checks
    "RET", # return practices
    "PTH", # pathlib over os.path
]
ignore = [
    "E203", # space before ':'
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
error_summary = false
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
